--- a/hn_nn_test/title_score_pull.ipynb
+++ b/hn_nn_test/title_score_pull.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/40/wsz96msx0yj64gpqth1rs3b40000gn/T/ipykernel_53539/2978195756.py:2: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql_query(query, conn)\n",
-      "/var/folders/40/wsz96msx0yj64gpqth1rs3b40000gn/T/ipykernel_53539/2978195756.py:5: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/tmp/ipykernel_10486/2978195756.py:2: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql_query(query, conn)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_10486/2978195756.py:5: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(\n"
      ]
     },
@@ -151,7 +157,7 @@
        "4      jazzdev  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +280,7 @@
        "4      jazzdev     10  [you, werent, meant, to, have, a, boss, the, c...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,16 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/andreas.paxinos/Documents/github/mli/.venv/lib/python3.9/site-packages/numpy/core/fromnumeric.py:3504: RuntimeWarning: Mean of empty slice.\n",
+      "/root/hn/.venv/lib/python3.10/site-packages/numpy/core/fromnumeric.py:3504: RuntimeWarning: Mean of empty slice.\n",
       "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "/Users/andreas.paxinos/Documents/github/mli/.venv/lib/python3.9/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "/root/hn/.venv/lib/python3.10/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ret = ret.dtype.type(ret / rcount)\n"
      ]
     },
@@ -352,8 +358,8 @@
        "      <td>ColinWright</td>\n",
        "      <td>10</td>\n",
        "      <td>[what, may, happen, in, the, next, hundred, ye...</td>\n",
-       "      <td>[[0.0038050802, 0.00086296524, 0.0029399444, 0...</td>\n",
-       "      <td>[0.00077195687, 0.00042079733, 0.00012249911, ...</td>\n",
+       "      <td>[[-0.33211058, -1.6681625, -0.78017384, 0.4175...</td>\n",
+       "      <td>[0.021796137, -0.27661428, -0.41408676, 0.1198...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -363,8 +369,8 @@
        "      <td>hncj</td>\n",
        "      <td>6</td>\n",
        "      <td>[getting, started, with, javascript, unit, tes...</td>\n",
-       "      <td>[[-0.0035109387, -0.0021732112, 0.00224942, -0...</td>\n",
-       "      <td>[-0.0017264247, -0.00029120408, 0.0007486603, ...</td>\n",
+       "      <td>[[-1.1683459, 0.75227326, 0.66683304, 0.535548...</td>\n",
+       "      <td>[-0.6989721, -0.42373028, 0.44482994, 0.706661...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -374,8 +380,8 @@
        "      <td>andymboyle</td>\n",
        "      <td>10</td>\n",
        "      <td>[armstrong, the, djangobased, and, opensource,...</td>\n",
-       "      <td>[[-0.0030918512, 0.00022298544, 0.0017556854, ...</td>\n",
-       "      <td>[0.0006859072, 1.0250059e-05, 0.0010865574, -0...</td>\n",
+       "      <td>[[-0.19418642, -0.1810417, -0.5249935, 0.74730...</td>\n",
+       "      <td>[-0.7928845, -0.6063877, 0.35532114, -0.006482...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -385,8 +391,8 @@
        "      <td>digisth</td>\n",
        "      <td>7</td>\n",
        "      <td>[why, web, reviewers, make, up, bad, things]</td>\n",
-       "      <td>[[0.0026316757, -0.0016147939, 0.0027679498, 0...</td>\n",
-       "      <td>[-0.00013478259, -0.0004138446, -0.0004691301,...</td>\n",
+       "      <td>[[-0.9369178, 0.2707923, 1.3470225, 0.02556703...</td>\n",
+       "      <td>[-0.32372883, -0.4201188, -0.04334995, -0.3068...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -396,8 +402,8 @@
        "      <td>jazzdev</td>\n",
        "      <td>10</td>\n",
        "      <td>[you, werent, meant, to, have, a, boss, the, c...</td>\n",
-       "      <td>[[0.0036288062, -0.0037281888, 0.0011980163, 0...</td>\n",
-       "      <td>[0.00026220054, -0.0013449227, 0.0005244772, -...</td>\n",
+       "      <td>[[-0.6829873, -0.059346426, -0.6143272, 0.6443...</td>\n",
+       "      <td>[-0.5315367, 0.23050113, -0.21941285, 0.186877...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -419,21 +425,21 @@
        "4      jazzdev     10  [you, werent, meant, to, have, a, boss, the, c...   \n",
        "\n",
        "                                        word_vectors  \\\n",
-       "0  [[0.0038050802, 0.00086296524, 0.0029399444, 0...   \n",
-       "1  [[-0.0035109387, -0.0021732112, 0.00224942, -0...   \n",
-       "2  [[-0.0030918512, 0.00022298544, 0.0017556854, ...   \n",
-       "3  [[0.0026316757, -0.0016147939, 0.0027679498, 0...   \n",
-       "4  [[0.0036288062, -0.0037281888, 0.0011980163, 0...   \n",
+       "0  [[-0.33211058, -1.6681625, -0.78017384, 0.4175...   \n",
+       "1  [[-1.1683459, 0.75227326, 0.66683304, 0.535548...   \n",
+       "2  [[-0.19418642, -0.1810417, -0.5249935, 0.74730...   \n",
+       "3  [[-0.9369178, 0.2707923, 1.3470225, 0.02556703...   \n",
+       "4  [[-0.6829873, -0.059346426, -0.6143272, 0.6443...   \n",
        "\n",
        "                                         mean_vector  \n",
-       "0  [0.00077195687, 0.00042079733, 0.00012249911, ...  \n",
-       "1  [-0.0017264247, -0.00029120408, 0.0007486603, ...  \n",
-       "2  [0.0006859072, 1.0250059e-05, 0.0010865574, -0...  \n",
-       "3  [-0.00013478259, -0.0004138446, -0.0004691301,...  \n",
-       "4  [0.00026220054, -0.0013449227, 0.0005244772, -...  "
+       "0  [0.021796137, -0.27661428, -0.41408676, 0.1198...  \n",
+       "1  [-0.6989721, -0.42373028, 0.44482994, 0.706661...  \n",
+       "2  [-0.7928845, -0.6063877, 0.35532114, -0.006482...  \n",
+       "3  [-0.32372883, -0.4201188, -0.04334995, -0.3068...  \n",
+       "4  [-0.5315367, 0.23050113, -0.21941285, 0.186877...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -489,14 +495,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/40/wsz96msx0yj64gpqth1rs3b40000gn/T/ipykernel_53539/1292129051.py:9: PerformanceWarning: \n",
+      "/tmp/ipykernel_10486/1292129051.py:9: PerformanceWarning: \n",
       "your performance may suffer as PyTables will pickle object types that it cannot\n",
       "map directly to c-types [inferred_type->mixed,key->block1_values] [items->Index(['mean_vector'], dtype='object')]\n",
       "\n",
@@ -518,16 +524,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rows with NaN mean vectors:\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -555,17 +554,50 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3150000</td>\n",
+       "      <td>19</td>\n",
+       "      <td>[0.021796137, -0.27661428, -0.41408676, 0.1198...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3500001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[-0.6989721, -0.42373028, 0.44482994, 0.706661...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3150001</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[-0.7928845, -0.6063877, 0.35532114, -0.006482...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6050000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[-0.32372883, -0.4201188, -0.04334995, -0.3068...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>150000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[-0.5315367, 0.23050113, -0.21941285, 0.186877...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [id, score, mean_vector]\n",
-       "Index: []"
+       "        id  score                                        mean_vector\n",
+       "0  3150000     19  [0.021796137, -0.27661428, -0.41408676, 0.1198...\n",
+       "1  3500001      1  [-0.6989721, -0.42373028, 0.44482994, 0.706661...\n",
+       "2  3150001      2  [-0.7928845, -0.6063877, 0.35532114, -0.006482...\n",
+       "3  6050000      1  [-0.32372883, -0.4201188, -0.04334995, -0.3068...\n",
+       "4   150000      1  [-0.5315367, 0.23050113, -0.21941285, 0.186877..."
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,14 +608,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File size: 102.61 MB\n"
+      "File size: 102.15 MB\n"
      ]
     }
    ],
@@ -593,6 +625,26 @@
     "file_size_bytes = os.path.getsize('hn_title_mean_vectors_scores.h5')\n",
     "file_size_mb = file_size_bytes / (1024 * 1024)\n",
     "print(f\"File size: {file_size_mb:.2f} MB\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100000, 8)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
@@ -619,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
